_build/html/reports/Exercise2_1.log
Traceback (most recent call last):
  File "/usr/local/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 1107, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/usr/local/lib/python3.9/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/usr/local/lib/python3.9/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/usr/local/Cellar/python@3.9/3.9.0_5/Frameworks/Python.framework/Versions/3.9/lib/python3.9/asyncio/base_events.py", line 642, in run_until_complete
    return future.result()
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 553, in async_execute
    await self.async_execute_cell(
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 852, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
s_bpass2 = signal.convolve(s,bpass2,'same')
f, Pxx_den = signal.welch(s_bpass2, Fs, noverlap=128, nperseg=256)
fig = plt.figure()
plt.suptitle('Î¦Î¬ÏƒÎ¼Î± Î¶Ï‰Î½Î¿Ï€ÎµÏÎ±Ï„Î¿Ï ÏƒÎ®Î¼Î±Ï„Î¿Ï‚ sonar (2 Î¶ÏÎ½ÎµÏ‚ Î´Î¹Î­Î»ÎµÏ…ÏƒÎ·Ï‚)')
plt.title('ÎœÏ€ÏÎ±Î½Î¯ÎºÎ±Ï‚ Î¦ÏÏ„Î¹Î¿Ï‚ el17147')
plt.grid()
plt.xlabel('Î£Ï…Ï‡Î½ÏŒÏ„Î·Ï„Î± (Hz)')
plt.ylabel('Î Ï…ÎºÎ½ÏŒÏ„Î·Ï„Î± Ï†Î¬ÏƒÎ¼Î±Ï„Î¿Ï‚ Î¹ÏƒÏ‡ÏÎ¿Ï‚')
plt.ylim((1e-15,1e-7))
fig.set_size_inches(18.5, 10.5)

plt.semilogy(f, Pxx_den)
sd.play(20*s_bpass2,Fs)

for 
------------------

[0;36m  File [0;32m"<ipython-input-7-9884b6f1db20>"[0;36m, line [0;32m15[0m
[0;31m    for[0m
[0m        ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-7-9884b6f1db20>, line 15)

